--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,5 @@ services:
         - 9763:9763
         - 9443:9443
         - 19444:19444
+      volumes:
+        - ./lib/:/opt/wso2esb-5.0.0/repository/components/lib/
