--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,5 @@ services:
         - 19444:19444
       volumes:
         - ./lib/:/opt/wso2esb-5.0.0/repository/components/lib/
+        - ./api/:/opt/wso2esb-5.0.0/repository/deployment/server/synapse-configs/default/api/
+        - ./connector/:/opt/wso2esb-5.0.0/repository/deployment/server/synapse-libs/
