--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.mediation.initializer</artifactId>
             <version>4.2.0</version>
